Fix theme-navigation overflow

--- a/src/core/static/styles/base/_reusables.scss
+++ b/src/core/static/styles/base/_reusables.scss
@@ -5,7 +5,7 @@
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
   @include bp-mediumup {
-    padding: 2rem;
+    padding: 1.5rem 2rem;
   }
 }
 
